--- a/style.css
+++ b/style.css
@@ -40,17 +40,20 @@ body{
     height: 30px;
 }
 
-.header-email{
-    border-radius: 8px;
-    background-color: #fff;
-    padding: 8px;
-    align-items: center;
+.header-time-container{
+    font-family: "Inria Sans", sans-serif;
+    font-weight: 700;
     display: flex;
+    align-items: center;
     gap: 4px;
-    font-family: "Geist", sans-serif;
-    color: #000;
-    font-size: 14px;
-    text-decoration: none;
+}
+
+.header-time-container svg{
+    opacity: 0.8;
+}
+
+#pht{
+    color: #C4BCBC;
 }
 
 .intro-container{
@@ -529,4 +532,114 @@ body{
     right: 10px;
     top: 10px;
 }
+
+.contacts-container{
+    padding: 32px 72px;
+    margin-top: 200px;
+}
+
+.contacts-container .first-row{
+    display: flex;
+    justify-content: space-between;
+}
+
+.first-row .email-title{
+    font-family: "Playfair Display", serif;
+    font-size: 30px;
+}
+
+.first-row .email-text{
+    font-family: "Fira Sans", serif;
+    font-size: 18px;
+    margin-top: 4px;
+    position: relative;
+    display: inline-block; 
+}
+
+.copy-email{
+    position: absolute;
+    top: -38px;
+    background-color: #000;
+    color: #fff;
+    border: 1px solid #fff;
+    width: 100%;
+    padding: 6px 16px;
+    border-radius: 4px;
+    font-family: "Inria Sans", serif;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    box-sizing: border-box;
+    opacity: 0;
+}
+
+#copy_text.animate{
+    animation: fadeIn 500ms ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
+  
+
+.email-text:hover .copy-email{
+    opacity: 1;
+    animation: fadeInUp 500ms ease-in-out;
+}
+
+@keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translate3d(0, 100%, 0);
+    }
+  
+    to {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
+  }
+  
+
+.contacts-list{
+    list-style: none;
+    position: relative;
+    z-index: 10;
+}
+
+.contacts-list a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    font-family: "Fira Sans", serif;
+    gap: 8px;
+    padding-block: 8px;
+
+}
+
+.contacts-list a svg {
+    align-self: flex-start;
+}
+
+
+.second-row{
+    font-family: "Fira Sans", serif;
+    margin-top: 48px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.copyright-container{
+    display: flex;
+    align-items: center; 
+    gap: 4px;
+}
+
+
 
